@@ -1,3 +1,7 @@
+2008-11-07  Eric Butler  <eric@extremeboredom.net>
+	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Don't explode
+	in Timeout callback if the BaseXmlEditorExtension was disposed.
+
 2008-11-07  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
